--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,16 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>fr.irit.bastide</groupId>
+            <groupId>io.github.bastide</groupId>
             <artifactId>BowlingMavenCorrection</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
